# OXI-Desktop

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  BackupDataView.qml  BackupItemView.qml  BackupManager.py  CMakeLists.txt  Dockerfile  HomeForm.qml  LoadingScreen.qml  MIDI.h  Nibble.h  OXI ONE UTILS.pro  OXI ONE UTILS.pro.user.850ed17  OXI ONE UTILS.pro.user.e55429e  OXI_SYSEX_MSG.h  OxiHardware.py  QT-SYSEX.pro  README.md  SYSEX_APP.h  SettingsManager.py  UpdateManager.py  UpdateStartDialogue.qml  azure-pipelines.yml  crc32.h  debug.py  delay.h  fonts.qrc  main.cpp  main.py  main.pyproject  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  midiworker.cpp  midiworker.h  oxihardware.cpp  (+13 more)
.github/workflows/: build.yml  main.yml
QMidi/: .gitignore  QMidi.pri  QMidiFile.cpp  QMidiIn.cpp  QMidiOut.cpp  README.md  qmidiin.cpp  qmidiin.h  qmidimessage.cpp  qmidimessage.h  qmidiout.cpp  qmidiout.h
QMidi/OS/: QMidi_ALSA.cpp  QMidi_CoreMidi.cpp  QMidi_Haiku.cpp  QMidi_Win32.cpp
QMidi/libs/rtmidi/: .gitignore  RtMidi.cpp
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/oxiinstruments/companion/oxi_companion_flttr/: MainActivity.kt
apps/oxi_desktop/: CMakeLists.txt  fonts.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oxi_desktop.qrc  oxiupdater.icns  projectbrowser.cpp  projectbrowser.h  projectbrowser.ui
apps/oxi_desktop/resources/: Style.qss  icon.icns  oxi_desktop.desktop
docker/ubuntu/: Dockerfile
docker/windows/: Dockerfile
documentation/: protocol.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
lib/: main.dart
lib/common/: oxi_theme.dart
lib/models/: ProjectsResponse.dart  midi_device_model.dart  project.dart
lib/screens/: device_selector.dart  home.dart  oxi_one.dart  project_selector.dart  update_select.dart  update_succeeded.dart  updater.dart
libs/oxi/oxi_core/: CMakeLists.txt  FileDownloader.cpp  FileTypes.cpp  FileTypes.h  MIDI.h  Nibble.h  Parser.h  Project.cpp  Project.h  ProjectData.h  ProjectVersion.h  SEQ_Defs.h  SEQ_Scale.h  SYSEX_APP.h  SYSEX_PROJ.h  crc32.h  filedownloader.h  midiworker.cpp  midiworker.h  miniz.c  miniz.h  oxi_core_global.h  oxidiscovery.cpp  oxidiscovery.h
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
resources/icon/: Oxi.icns  make_icns.sh  oxi_color_icon.psd  oxi_color_icon_mini.psd  oxi_color_icon_small.psd
src/oxionecompanion/: BackupManager.py  OxiHardware.py  SettingsManager.py  UpdateManager.py  __main__.py  app.py  qml.qrc
src/oxionecompanion.dist-info/: METADATA
src/oxionecompanion/resources/: oxionecompanion.icns
src/oxionecompanion/ui/: CClayout.qml  HomeForm.qml  LoadingScreen.qml  MidiConfigView.qml  ProjectViewGrid.qml  UpdateProgress.qml  UpdateStartDialogue.qml  main.qml  qtquickcontrols2.conf
src/oxionecompanion/ui/components/: UiButton.qml
src/oxionecompanion/ui/style/: OxiTheme.qml
test/: widget_test.dart
tests/unittests/: CMakeLists.txt  main.cpp  midiworker_test.cpp  oxidiscovery_test.cpp  send_raw_test.cpp  simple_test_case.cpp
ui/: BackupDataView.qml  BackupStartDialogue.qml  GlobalConfigView.qml  HomeForm.qml  MidiConfigView.qml  ProjectView.qml  UpdateProgress.qml  UpdateStartDialogue.qml  main.qml
ui/components/: OxiSwitch.qml  Style.qml  UiButton.qml
ui/style/: OxiTheme.qml  qmldir
web/: index.html  manifest.json
